--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,26 @@
-# gradle
-
-.gradle/
-build/
-out/
-classes/
-
 # eclipse
-
+bin
 *.launch
-
-# idea
-
-.idea/
-*.iml
-*.ipr
-*.iws
-
-# vscode
-
-.settings/
-.vscode/
-bin/
+.settings
+.metadata
 .classpath
 .project
 
-# macos
+# idea
 
-*.DS_Store
+out
+*.ipr
+*.iws
+*.iml
+.idea
+
+# gradle
+build
+.gradle
 
 # other
 eclipse
 run
 
-run/
+# Files from Forge MDK
+forge*changelog.txt
