--- a/gradle.properties
+++ b/gradle.properties
@@ -10,5 +10,6 @@ registrate_version = MC1.18.2-1.1.3
 curios_version =1.18.2-5.0.7.1
 mc_version=1.18.2
 jei_version=9.7.0.209
-
+mixin_version = 0.8.5
+mixingradle_version = 0.7-SNAPSHOT
 mod_version=0.0.9-Rumia
