--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,14 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx7G
 org.gradle.daemon=false
-create_minecraft_version = 1.19.2
-flywheel_minecraft_version = 1.19.2
-create_version = 0.5.0.f-15
-flywheel_version = 0.6.7-8
-registrate_version = MC1.19-1.1.5
-curios_version =1.19.2-5.1.1.0
-jei_minecraft_version=1.19.2
-jei_version=11.2.0.246
-mc_version=1.19.2
+create_minecraft_version = 1.18.2
+flywheel_minecraft_version = 1.18.2
+create_version = 0.5.0.e-196
+flywheel_version = 0.6.6-94
+registrate_version = MC1.18.2-1.1.3
+curios_version =1.18.2-5.0.7.1
+mc_version=1.18.2
+jei_version=9.7.0.209
+mixin_version = 0.8.5
+mixingradle_version = 0.7-SNAPSHOT
+mod_version=0.0.9-Rumia
