更新版本号，添加HXD3D驾驶室门，HXD3D地板，修改驾驶室门模型

--- a/build.gradle
+++ b/build.gradle
@@ -218,6 +218,7 @@ dependencies {
 
     implementation 'org.spongepowered:mixin:0.8.2'
     annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
+    testAnnotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
     // runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}") // Adds the full JEI mod as a runtime dependency
