--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx6G
 	loader_version=0.14.9
 
 # Mod Properties
-	mod_version = 0.0.8-VIVIT
+	mod_version = 0.1.0-Cirno
 	maven_group = willow.train.kuayue
 	archives_base_name = kuayue
 
