添加空调块、25B登车梯、25B车厢端面

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,4 @@ mc_version=1.18.2
 jei_version=9.7.0.209
 mixin_version = 0.8.5
 mixingradle_version = 0.7-SNAPSHOT
-mod_version=0.1.0-Cirno
+mod_version=0.1.0-Cirno-pre
