将0.1.1版本移植到1.19.2

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,6 @@ curios_version =1.19.2-5.1.1.0
 jei_minecraft_version=1.19.2
 jei_version=11.2.0.246
 mc_version=1.19.2
+mixin_version = 0.8.5
+mixingradle_version = 0.7-SNAPSHOT
+mod_version = 0.1.1n-Cirno
